# Automation-Auditor

./: .env.example  .gitignore  README.md  TRP1 Challenge Week 2_ The Automaton Auditor (1).docx  pyproject.toml  rubric.json
.github/: copilot_instruction.md
audit/: report_onself_generated  report_onself_generated.md
src/: graph.py  state.py
src/nodes/: detectives.py  judges.py  justice.py  llm_locks.py
src/tools/: doc_tools.py  repo_tools.py
