[project]
name = "automation-auditor"
version = "0.1.0"
description = "A LangGraph-based forensic governance swarm for auditing GitHub repositories against architectural reports."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Yohannes Dereje" }
]
keywords = ["langgraph", "forensic-audit", "multi-agent", "ast", "docling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "docling>=2.75.0",
    "gitingest>=0.3.1",
    "gitpython>=3.1.46",
    "langchain-core>=1.2.16",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.1",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
llm = [
    "langchain-openai>=1.1.10",
    "langchain-google-genai>=4.2.1",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
